# homebase-assignment

./: .gitignore  README.md
django-app/: pyproject.toml
django-app/app/app/: settings.py  urls.py
django-app/app/external_user/: apps.py  models.py  urls.py  views.py
django-app/app/external_user/templates/external_user/: index.html
django-app/app/product/: admin.py  models.py
django-app/app/product/migrations/: 0001_initial.py
express-app/: index.ts  inversify.config.ts  package-lock.json  package.json  tsconfig.json
express-app/adapter/inbound/: api-handler.ts  validation.ts
express-app/adapter/outbound/repository/: user.repository.ts
express-app/adapter/outbound/typeorm/: datasource.ts
express-app/domain/: user.service.ts
express-app/model/: user.model.ts
express-app/port/inbound/: index.ts  user.service.port.ts
express-app/port/outbound/: index.ts  user.repository.port.ts
proxy/: pyproject.toml  server.py
