[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Tran Quang <randytran8800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
