[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["Tran Quang <randytran8800@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
